--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ img {
 body {
     width: 100vw;
     height: auto;
-    border: solid red;
     background-color: #dfdfdf;
     font-family: Verdana, sans-serif;
 }
@@ -22,12 +21,17 @@ body {
 }
 header {
     position: fixed;
+    top: 0;
     display: flex;
     justify-content: space-between;
-    width: 100%;
     align-items: center;
-    padding: 1rem;
-    border: solid green;
+    width: 100%;
+    background-color: #0094ff;
+}
+
+#nav-bar li {
+    font-size: 1.8em;
+    padding: 25px;
 }
 
 #form {
@@ -45,9 +49,10 @@ header {
 
 }
 
-ul {
-    border: solid red;
-    list-style-type: none;
+#nav-bar ul {
+    display: flex;
+    list-style: none;
+    left: 0;
 }
 
 #how-it-works{
@@ -64,6 +69,7 @@ ul {
     margin-bottom: 1rem;
     background-image: linear-gradient(#b6ff00 10%, #3a4915);
     border-radius: 0.5rem;
+    list-style: none;
 }
 
 #footer {
